ferrolearn-core/tests/compile_fail/predict_unfitted_kmeans.stderr
error[E0599]: no method named `predict` found for struct `KMeans<F>` in the current scope
  --> tests/compile_fail/predict_unfitted_kmeans.rs:12:19
   |
12 |     let _ = model.predict(&x);
   |                   ^^^^^^^ method not found in `KMeans<f64>`
